apps/demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: nginx
          image: ghcr.io/tortelloste/devops-lab-demo@sha256:aab3aef827bebac6295199e53251aa86b0f30ddf717f175397c5ad98a83f5ad0
          ports:
            - containerPort: 80
